force-app/main/default/objects/Annual_Expectation__c/Annual_Expectation__c.object-meta.xml
<CustomObject>
    <label>Annual Expectation</label>
    <nameField>
        <displayFormat>AE-{0000}</displayFormat>
        <label>Annual Expectations Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Expectations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>