force-app/main/default/objects/Annual_Expectation__c/fields/Due_By__c.field-meta.xml
<CustomField>
    <fullName>Due_By__c</fullName>
    <label>Due By</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Due_By_Date</valueSetName>
    </valueSet>
</CustomField>