force-app/main/default/objects/Annual_Expectation__c/fields/End_of_Year_Review__c.field-meta.xml
<CustomField>
    <fullName>End_of_Year_Review__c</fullName>
    <label>End of Year Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SMART_Target_Status</valueSetName>
    </valueSet>
</CustomField>