force-app/main/default/objects/Annual_Expectation__c/fields/Expectation_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Expectation_Exchange__c</fullName>
    <label>Expectation Exchange</label>
    <referenceTo>Expectation_Exchange__c</referenceTo>
    <relationshipLabel>Annual Expectations</relationshipLabel>
    <relationshipName>Annual_Expectations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>