force-app/main/default/objects/Annual_Expectation__c/fields/SMART_Objective__c.field-meta.xml
<CustomField>
    <fullName>SMART_Objective__c</fullName>
    <label>SMART Objective</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>