force-app/main/default/objects/Annual_Expectation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Performance Expectation</fullName>
            </value>
            <value>
                <fullName>Personal Development Expectation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>